# thrlabel-psi

./: README.md  REPRODUCIBILITY.md  attack.py  complexity.py  datagen.py  experiments.py  figs.py  kit_common.py  make_figures.py  protocol.py  pyproject.toml  sim.py  sim_results.json  sim_thrlabel.py
outputs/local_run_20260711_203548/: local_experiments_summary.md
outputs/local_run_20260711_203548/experiment_artifacts/: experiments_metadata.json  figures_metadata.json  rq1_efficiency.csv  rq3_utility.csv  rq3_utility_filt2.csv  rq3_utility_noisy.csv  rq4_advantage.csv  rq4_advantage_noisy.csv  sim_results.json  thrlabel_tables.json
scripts/: README_MAC.md  additive_share_demo.py  macos_feasibility.sh  run_local_experiments.sh
tests/: conftest.py  test_repro.py  test_smoke.py  test_units.py
